--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>ProyectoTatoos</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../assets/media/logo-white.png">
 </head>
 <body>
   <app-root></app-root>
